# atom

./: .dockerignore  .gitignore  .scala-steward.conf  .scalafmt.conf  README.md  atom  atom.bat  atom.sh  build.sbt  codemeta.json  devenv.nix  devenv.yaml  install-local-joern.sh  joern  log4j2.xml  updateDependencies.sh
.github/workflows/: container-tests.yml  containers.yml  nodejstests.yml  npm-release.yml  pr.yml  (+2 more)
ci/: Dockerfile  Dockerfile-alpine-ruby  Dockerfile-alpine-ruby3  Dockerfile-ruby  Dockerfile-ruby3  Dockerfile-sle  Dockerfile.sle  annotations.json  config.json  native-image-musl.sh  native-image.sh  trace-native-image.sh
contrib/: Dockerfile-graalvm21  README.md  java21.patch
docs/: .readthedocs.yaml  docusaurus.config.ts  package-lock.json  pnpm-lock.yaml  sidebars.ts
lib/: README.md  org.eclipse.cdt.core_9.1.0.202505200054.jar.ABOUT  org.eclipse.cdt.core_9.1.0.202505200054.jar.sha512  org.eclipse.cdt.core_9.2.100.202507101054.jar.ABOUT  org.eclipse.cdt.core_9.2.100.202507101054.jar.sha512  org.eclipse.cdt.core_9.3.0.202512020204.jar.ABOUT  org.eclipse.cdt.core_9.3.0.202512020204.jar.sha512  org.eclipse.cdt.core_9.3.100.202512101642.jar.ABOUT  org.eclipse.cdt.core_9.3.100.202512101642.jar.sha512
project/: Environment.scala  Projects.scala  SimpleCache.scala  Versions.scala  meta-build.sbt  plugins.sbt
specification/: atom.proto  gen-bindings.sh  gen-jsonschema.sh
specification/samples/python-atomgen/: README.md  pyproject.toml
specification/samples/python-atomgen/atomgen/: cli.py
specification/samples/python-atomgen/atomgen/lib/: atom.py
(+139 files in other folders)
